Fixed logo alignment

--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -32,8 +32,12 @@ ul {
   background-color: #393f4d;
   grid-area: header;
   display: grid;
-  grid-template: 1fr / 1fr 1fr;
+  grid-template: 1fr / 1fr 2fr;
   align-items: center;
+}
+
+.logo {
+  justify-self: start;
 }
 
 .menu > ul{
